# AgentWorkOS

./: .gitattributes  .gitignore  AGENTS.md  README.md  TERMS.md  agentpkg.toml  agentworkos.lock.json  agentworkos.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: agent-targets.md  cli.md  getting-started.md  github-knowledge.md  index.md  inspirations.md  runtimes.md
docs/specs/: agentpkg-toml.md  agentworkos-lock.md  agentworkos-toml.md
examples/harzva-default/: TERMS.md  agentworkos.toml
schemas/: agentpkg.schema.json  agentworkos-lock.schema.json  agentworkos.schema.json
scripts/: bootstrap.ps1
skills/agentworkos-inventory/: SKILL.md
src/agentworkos/: __init__.py  cli.py  doctor.py  install.py  lockfile.py  manifest.py  remote.py  scan.py  sync.py  terms.py  util.py
tests/: test_cli.py
